1st commit again

--- a/partners.html
+++ b/partners.html
@@ -260,7 +260,7 @@
             
             <div class="banner-section position-relative d-flex justify-content-center align-items-center h-100">
               <img src="/assets/img/left-icon.svg" alt="Left Icon" class="position-absolute start-0 saturate-200">
-              <img src="/assets/img/right-icon.svg" alt="Right Icon" class="position-absolute end-0 saturate-200">
+              <img src="/assets/img/right-icon02.svg" alt="Right Icon" class="position-absolute end-0 saturate-200">
               <a href="https://communityactioncollab.org/" target="_blank" class="text-decoration-none">
               <div class="d-flex justify-content-center align-items-center hover-effect rounded-xl mb-3 mt-2 px-4 transition-all">
                 <div class="d-flex align-items-center ">
